[package]
name = "kiraraten_bot"
version = "0.1.0"
authors = ["y52en <y52en@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.16.0", features = ["rustls"], default-features = false }
# html5ever = "0.25.1"
reqwest  = {version="0.11.3", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.5.0", features = ["full"] }
scraper = "0.12"
regex = "1"
once_cell = "1.7.2"
# tokio-stream = "0.1"
twitter-text  = "0.2.0"
twitter_text_config  = "0.2.0"
lazy_static = "1.4"
futures = "0.3"
kuon = {version = "0.0.26",path="kuon_nouse_openssl"}
rustc-serialize = "0.3.24"


[profile.release]
opt-level = 3
lto = true

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
